crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/alembic.usdz
version https://git-lfs.github.com/spec/v1
oid sha256:aaab2562e592a5102bfabc62738ab5ec56a46da4bf0ba13b013c599b09dbdf0e
size 802
